# discord-bot-template

./: .dockerignore  Dockerfile  README.md  example.env  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
mainbot/: __init__.py  __main__.py
mainbot/cogs/: developer.py
mainbot/cogs/help/: embed_utilizer.py  main.py  views.py
mainbot/cogs/mics/: main.py
mainbot/core/: __init__.py  bot.py  cache.py  constants.py  context.py  converter.py  paginator.py  views.py
mainbot/events/: __init__.py  error.py  member.py  message.py  thread.py
mainbot/events/_helper/: hooks.py
mainbot/utils/: __init__.py  checks.py  db.py  modules.py  util.py
scripts/: init.sh
